--- a/aha/util/application_parameters.json
+++ b/aha/util/application_parameters.json
@@ -105,7 +105,7 @@
     },
     "conv2_x":{
         "default":{
-            "HALIDE_GEN_ARGS":"in_img=56 pad=1 ksize=3 stride=1 n_ic=32 n_oc=32 k_ic=16 k_oc=16 glb_i=8 glb_k=8 glb_o=8",
+            "HALIDE_GEN_ARGS":"in_img=56 pad=1 ksize=3 stride=1 n_ic=28 n_oc=28 k_ic=14 k_oc=14 glb_i=7 glb_k=7 glb_o=7",
             "HL_TARGET":"host-x86-64-enable_ponds",
             "DISABLE_GP":"1",
             "MANUAL_PLACER":"1",
@@ -113,7 +113,7 @@
             "MEM2PE_REG_CHAIN":"1"
         },
         "fastest":{
-            "HALIDE_GEN_ARGS":"in_img=56 pad=1 ksize=3 stride=1 n_ic=32 n_oc=32 k_ic=16 k_oc=16 glb_i=8 glb_k=8 glb_o=8",
+            "HALIDE_GEN_ARGS":"in_img=56 pad=1 ksize=3 stride=1 n_ic=28 n_oc=28 k_ic=14 k_oc=14 glb_i=7 glb_k=7 glb_o=7",
             "HL_TARGET":"host-x86-64-enable_ponds",
             "PNR_PLACER_EXP":"1",
             "DISABLE_GP":"1",
@@ -122,7 +122,7 @@
             "MEM2PE_REG_CHAIN":"1"    
         },
         "sweep":{
-            "HALIDE_GEN_ARGS":"in_img=56 pad=1 ksize=3 stride=1 n_ic=32 n_oc=32 k_ic=16 k_oc=16 glb_i=8 glb_k=8 glb_o=8",
+            "HALIDE_GEN_ARGS":"in_img=56 pad=1 ksize=3 stride=1 n_ic=28 n_oc=28 k_ic=14 k_oc=14 glb_i=7 glb_k=7 glb_o=7",
             "HL_TARGET":"host-x86-64-enable_ponds",
             "DISABLE_GP":"1",
             "SWEEP_PNR_PLACER_EXP":"1",
@@ -133,7 +133,7 @@
     },
     "conv3_1":{
         "default":{
-            "HALIDE_GEN_ARGS":"in_img=56 pad=1 ksize=3 stride=2 n_ic=32 n_oc=32 k_ic=16 k_oc=16 glb_i=8 glb_k=8 glb_o=8",
+            "HALIDE_GEN_ARGS":"in_img=56 pad=1 ksize=3 stride=2 n_ic=28 n_oc=28 k_ic=14 k_oc=14 glb_i=7 glb_k=7 glb_o=7",
             "HL_TARGET":"host-x86-64-enable_ponds",
             "DISABLE_GP":"1",
             "MANUAL_PLACER":"1",
@@ -141,7 +141,7 @@
             "MEM2PE_REG_CHAIN":"1"
         },
         "fastest":{
-            "HALIDE_GEN_ARGS":"in_img=56 pad=1 ksize=3 stride=2 n_ic=32 n_oc=32 k_ic=16 k_oc=16 glb_i=8 glb_k=8 glb_o=8",
+            "HALIDE_GEN_ARGS":"in_img=56 pad=1 ksize=3 stride=2 n_ic=28 n_oc=28 k_ic=14 k_oc=14 glb_i=7 glb_k=7 glb_o=7",
             "HL_TARGET":"host-x86-64-enable_ponds",
             "PNR_PLACER_EXP":"1",
             "DISABLE_GP":"1",
@@ -150,7 +150,7 @@
             "MEM2PE_REG_CHAIN":"1"
         },
         "sweep":{
-            "HALIDE_GEN_ARGS":"in_img=56 pad=1 ksize=3 stride=2 n_ic=32 n_oc=32 k_ic=16 k_oc=16 glb_i=8 glb_k=8 glb_o=8",
+            "HALIDE_GEN_ARGS":"in_img=56 pad=1 ksize=3 stride=2 n_ic=28 n_oc=28 k_ic=14 k_oc=14 glb_i=7 glb_k=7 glb_o=7",
             "HL_TARGET":"host-x86-64-enable_ponds",
             "DISABLE_GP":"1",
             "SWEEP_PNR_PLACER_EXP":"1",
@@ -161,7 +161,7 @@
     },
     "conv3_x":{
         "default":{
-            "HALIDE_GEN_ARGS":"in_img=28 pad=1 ksize=3 stride=1 n_ic=32 n_oc=32 k_ic=16 k_oc=16 glb_i=8 glb_k=8 glb_o=8",
+            "HALIDE_GEN_ARGS":"in_img=28 pad=1 ksize=3 stride=1 n_ic=28 n_oc=28 k_ic=14 k_oc=14 glb_i=7 glb_k=7 glb_o=7",
             "HL_TARGET":"host-x86-64-enable_ponds",
             "DISABLE_GP":"1",
             "MANUAL_PLACER":"1",
@@ -169,7 +169,7 @@
             "MEM2PE_REG_CHAIN":"1"
         },
         "fastest":{
-            "HALIDE_GEN_ARGS":"in_img=28 pad=1 ksize=3 stride=1 n_ic=32 n_oc=32 k_ic=16 k_oc=16 glb_i=8 glb_k=8 glb_o=8",
+            "HALIDE_GEN_ARGS":"in_img=28 pad=1 ksize=3 stride=1 n_ic=28 n_oc=28 k_ic=14 k_oc=14 glb_i=7 glb_k=7 glb_o=7",
             "HL_TARGET":"host-x86-64-enable_ponds",
             "PNR_PLACER_EXP":"1",
             "DISABLE_GP":"1",
@@ -178,7 +178,7 @@
             "MEM2PE_REG_CHAIN":"1"
         },
         "sweep":{
-            "HALIDE_GEN_ARGS":"in_img=28 pad=1 ksize=3 stride=1 n_ic=32 n_oc=32 k_ic=16 k_oc=16 glb_i=8 glb_k=8 glb_o=8",
+            "HALIDE_GEN_ARGS":"in_img=28 pad=1 ksize=3 stride=1 n_ic=28 n_oc=28 k_ic=14 k_oc=14 glb_i=7 glb_k=7 glb_o=7",
             "HL_TARGET":"host-x86-64-enable_ponds",
             "DISABLE_GP":"1",
             "SWEEP_PNR_PLACER_EXP":"1",
@@ -189,7 +189,7 @@
     },
     "conv4_1":{
         "default":{
-            "HALIDE_GEN_ARGS":"in_img=28 pad=1 ksize=3 stride=2 n_ic=32 n_oc=32 k_ic=16 k_oc=16 glb_i=8 glb_k=8 glb_o=8",
+            "HALIDE_GEN_ARGS":"in_img=28 pad=1 ksize=3 stride=2 n_ic=28 n_oc=28 k_ic=14 k_oc=14 glb_i=7 glb_k=7 glb_o=7",
             "HL_TARGET":"host-x86-64-enable_ponds",
             "DISABLE_GP":"1",
             "MANUAL_PLACER":"1",
@@ -197,7 +197,7 @@
             "MEM2PE_REG_CHAIN":"1"
         },
         "fastest":{
-            "HALIDE_GEN_ARGS":"in_img=28 pad=1 ksize=3 stride=2 n_ic=32 n_oc=32 k_ic=16 k_oc=16 glb_i=8 glb_k=8 glb_o=8",
+            "HALIDE_GEN_ARGS":"in_img=28 pad=1 ksize=3 stride=2 n_ic=28 n_oc=28 k_ic=14 k_oc=14 glb_i=7 glb_k=7 glb_o=7",
             "HL_TARGET":"host-x86-64-enable_ponds",
             "PNR_PLACER_EXP":"1",
             "DISABLE_GP":"1",
@@ -206,7 +206,7 @@
             "MEM2PE_REG_CHAIN":"1"
         },
         "sweep":{
-            "HALIDE_GEN_ARGS":"in_img=28 pad=1 ksize=3 stride=2 n_ic=32 n_oc=32 k_ic=16 k_oc=16 glb_i=8 glb_k=8 glb_o=8",
+            "HALIDE_GEN_ARGS":"in_img=28 pad=1 ksize=3 stride=2 n_ic=28 n_oc=28 k_ic=14 k_oc=14 glb_i=7 glb_k=7 glb_o=7",
             "HL_TARGET":"host-x86-64-enable_ponds",
             "DISABLE_GP":"1",
             "SWEEP_PNR_PLACER_EXP":"1",
@@ -217,7 +217,7 @@
     },
     "conv4_x":{
         "default":{
-            "HALIDE_GEN_ARGS":"in_img=14 pad=1 ksize=3 stride=1 n_ic=32 n_oc=32 k_ic=16 k_oc=16 glb_i=8 glb_k=8 glb_o=8",
+            "HALIDE_GEN_ARGS":"schedule=12 in_img=14 pad=1 ksize=3 stride=1 n_ic=28 n_oc=28 k_ic=14 k_oc=14 glb_i=7 glb_k=7 glb_o=7",
             "HL_TARGET":"host-x86-64-enable_ponds",
             "DISABLE_GP":"1",
             "MANUAL_PLACER":"1",
@@ -225,7 +225,7 @@
             "MEM2PE_REG_CHAIN":"1"
         },
         "fastest":{
-            "HALIDE_GEN_ARGS":"in_img=14 pad=1 ksize=3 stride=1 n_ic=32 n_oc=32 k_ic=16 k_oc=16 glb_i=8 glb_k=8 glb_o=8",
+            "HALIDE_GEN_ARGS":"schedule=12 in_img=14 pad=1 ksize=3 stride=1 n_ic=28 n_oc=28 k_ic=14 k_oc=14 glb_i=7 glb_k=7 glb_o=7",
             "HL_TARGET":"host-x86-64-enable_ponds",
             "PNR_PLACER_EXP":"1",
             "DISABLE_GP":"1",
@@ -234,7 +234,7 @@
             "MEM2PE_REG_CHAIN":"1"
         },
         "sweep":{
-            "HALIDE_GEN_ARGS":"in_img=14 pad=1 ksize=3 stride=1 n_ic=32 n_oc=32 k_ic=16 k_oc=16 glb_i=8 glb_k=8 glb_o=8",
+            "HALIDE_GEN_ARGS":"schedule=12 in_img=14 pad=1 ksize=3 stride=1 n_ic=28 n_oc=28 k_ic=14 k_oc=14 glb_i=7 glb_k=7 glb_o=7",
             "HL_TARGET":"host-x86-64-enable_ponds",
             "DISABLE_GP":"1",
             "SWEEP_PNR_PLACER_EXP":"1",
@@ -245,7 +245,7 @@
     },
     "conv5_1":{
         "default":{
-            "HALIDE_GEN_ARGS":"in_img=14 pad=1 ksize=3 stride=2 n_ic=32 n_oc=32 k_ic=16 k_oc=16 glb_i=8 glb_k=8 glb_o=8",
+            "HALIDE_GEN_ARGS":"in_img=14 pad=1 ksize=3 stride=2 n_ic=28 n_oc=28 k_ic=14 k_oc=14 glb_i=7 glb_k=7 glb_o=7",
             "HL_TARGET":"host-x86-64-enable_ponds",
             "DISABLE_GP":"1",
             "MANUAL_PLACER":"1",
@@ -253,7 +253,7 @@
             "MEM2PE_REG_CHAIN":"1"
         },
         "fastest":{
-            "HALIDE_GEN_ARGS":"in_img=14 pad=1 ksize=3 stride=2 n_ic=16 n_oc=16 k_ic=8 k_oc=8 glb_i=8 glb_k=4 glb_o=4",
+            "HALIDE_GEN_ARGS":"in_img=14 pad=1 ksize=3 stride=2 n_ic=28 n_oc=28 k_ic=14 k_oc=14 glb_i=7 glb_k=7 glb_o=7",
             "HL_TARGET":"host-x86-64-enable_ponds",
             "PNR_PLACER_EXP":"1",
             "DISABLE_GP":"1",
@@ -262,7 +262,7 @@
             "MEM2PE_REG_CHAIN":"1"
         },
         "sweep":{
-            "HALIDE_GEN_ARGS":"in_img=14 pad=1 ksize=3 stride=2 n_ic=16 n_oc=16 k_ic=8 k_oc=8 glb_i=8 glb_k=4 glb_o=4",
+            "HALIDE_GEN_ARGS":"in_img=14 pad=1 ksize=3 stride=2 n_ic=28 n_oc=28 k_ic=14 k_oc=14 glb_i=7 glb_k=7 glb_o=7",
             "HL_TARGET":"host-x86-64-enable_ponds",
             "DISABLE_GP":"1",
             "SWEEP_PNR_PLACER_EXP":"1",
@@ -273,7 +273,7 @@
     },
     "conv5_x":{
         "default":{
-            "HALIDE_GEN_ARGS":"in_img=7 pad=1 ksize=3 stride=1 n_ic=32 n_oc=32 k_ic=16 k_oc=16 glb_i=8 glb_k=8 glb_o=8",
+            "HALIDE_GEN_ARGS":"in_img=7 pad=1 ksize=3 stride=1 n_ic=28 n_oc=28 k_ic=14 k_oc=14 glb_i=7 glb_k=7 glb_o=7",
             "HL_TARGET":"host-x86-64-enable_ponds",
             "DISABLE_GP":"1",
             "MANUAL_PLACER":"1",
@@ -281,13 +281,13 @@
             "MEM2PE_REG_CHAIN":"1"
         },
         "fastest":{
-            "HALIDE_GEN_ARGS":"in_img=7 pad=1 ksize=3 stride=1 n_ic=16 n_oc=16 k_ic=8 k_oc=8 glb_i=8 glb_k=4 glb_o=4",
+            "HALIDE_GEN_ARGS":"in_img=7 pad=1 ksize=3 stride=1 n_ic=28 n_oc=28 k_ic=14 k_oc=14 glb_i=7 glb_k=7 glb_o=7",
             "HL_TARGET":"host-x86-64-enable_ponds",
             "PNR_PLACER_EXP":"1",
             "DISABLE_GP":"1"    
         },
         "sweep":{
-            "HALIDE_GEN_ARGS":"in_img=7 pad=1 ksize=3 stride=1 n_ic=16 n_oc=16 k_ic=8 k_oc=8 glb_i=8 glb_k=4 glb_o=4",
+            "HALIDE_GEN_ARGS":"in_img=7 pad=1 ksize=3 stride=1 n_ic=28 n_oc=28 k_ic=14 k_oc=14 glb_i=7 glb_k=7 glb_o=7",
             "HL_TARGET":"host-x86-64-enable_ponds",
             "DISABLE_GP":"1",
             "SWEEP_PNR_PLACER_EXP":"1"    
