--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -154,28 +154,12 @@ steps:
         pre-exit:    $REGRESS_METAHOOKS --pre-exit
 
   commands:
-  - |
-    if ! test -e /buildkite/.TEST; then
-        echo "+++ No .TEST detected, so skip redundant regressions"
-        exit
-    fi
-  - |
-    if test -e /buildkite/DO_PR; then
-        echo "--- DO_PR SET (TRUE)"
-    else
-        echo "--- DO_PR UNSET (FALSE)"
-    fi
-  - source /aha/bin/activate
-  - source /cad/modules/tcl/init/sh
-  - module load base incisive xcelium/19.03.003 vcs/T-2022.06-SP2
-  # make /bin/sh symlink to bash instead of dash:
-  - echo "dash dash/sh boolean false" | debconf-set-selections
-  - DEBIAN_FRONTEND=noninteractive dpkg-reconfigure dash
-  - apt update
-  - apt install time
-  - ls /aha
-  - echo    "--- PIP FREEZE"; pip freeze
-  - echo -n "--- GARNET VERSION "; (cd garnet && git rev-parse --verify HEAD)
+
+  # Setup
+  - /bin/rm -rf tmp
+  - /aha/.buildkite/bin/regress-metahooks.sh --commands > tmp
+  - source tmp; /bin/rm -rf tmp
+
   # Run regression tests
   - if test -e /buildkite/DO_PR; then
       echo "Trigger came from submod repo pull request; use pr config";
@@ -183,8 +167,6 @@ steps:
     else
       echo "Trigger came from aha repo; use default config";
     fi;
-
-
 
 
   # ORIGINAL:
