--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -157,17 +157,8 @@ steps:
 
   # Setup
   - /bin/rm -rf tmp
-  - /aha/.buildkite/bin/regress-metahooks.sh --commands > tmp
+  - /aha/.buildkite/bin/regress-metahooks.sh --commands conv2_sparse > tmp
   - source tmp; /bin/rm -rf tmp
-
-  # Run regression tests
-  - if test -e /buildkite/DO_PR; then
-      echo "Trigger came from submod repo pull request; use pr config";
-      export CONFIG=pr;
-    else
-      echo "Trigger came from aha repo; use default config";
-    fi;
-
 
   # ORIGINAL:
   # - aha regress $$CONFIG --daemon auto --include-dense-only-tests
@@ -178,18 +169,9 @@ steps:
   # - aha regress conv1_sparse  # this worked, see aha-flow build 10120
   - aha regress conv2_sparse
 
-
-
-
   # We report success to the aha-flow app by removing the .TEST file,
   # which is created in the post-checkout hook and checked for in the
   # pre-exit hook.
-
-  # Okay to remove or check but DO NOT CREATE anything in /buildkite, it is owned by root :(
-  - echo "--- Removing Failure Canary"
-  - ls -al /buildkite
-  - rm -rf /buildkite/.TEST
-  - ls -al /buildkite
 
 - wait: { continue_on_failure: true } # One step at a time + continue on failure
 
