--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -4,7 +4,6 @@
 
 env:
   CONFIG: ${CONFIG:-daily}
-  REGRESS_METAHOOKS: $BUILDKITE_BUILD_CHECKOUT_PATH/.buildkite/bin/regress-metahooks.sh
 
 steps:
 
@@ -23,6 +22,9 @@ steps:
       pre-checkout: |
         echo "+++ BDI PRE CHECKOUT HOOK"
         set +u     # nounset? not on my watch!
+
+        if [ "$$FLOW_HEAD_SHA" ]; then
+            echo "+++ ERROR Not processing heroku requests anymore"; exit 13; fi
 
         # Clone the aha repo; starting in root dir '/' I think
         echo I am in dir `pwd`
@@ -78,19 +80,11 @@ steps:
   agents:
     docker: true
 
-# Set soft_fail so that failing gold check does not fail pipeline.
 - label: ":hammer: Amber Gold RTL 1m"
-  agents: { docker: true }  # must run on r7cad-docker b/c that's where we built the docker image!
   key: "goldcheck-amber"
   depends_on: "docker-build"
-  soft_fail: true  
-  plugins:
-    - uber-workflow/run-without-clone:  # Don't need clone if using docker
-    - docker#v3.2.0:
-        image:   garnet:aha-flow-build-${BUILDKITE_BUILD_NUMBER}
-        volumes: ["/cad/:/cad"]
-        shell:   ["/bin/bash", "-e", "-c"]
-        mount-checkout: false
+  # Set soft_fail so that failing gold check does not fail pipeline.
+  soft_fail: true
   commands: |
     echo "/aha/.buildkite/bin/rtl-goldcheck.sh amber"
     if ! /aha/.buildkite/bin/rtl-goldcheck.sh amber; then
@@ -99,20 +93,22 @@ steps:
         echo "$$msg" | buildkite-agent annotate --style "error" --context amber
         exit 13
     fi
+  plugins:
+    - uber-workflow/run-without-clone:
+    - docker#v3.2.0:
+        image: garnet:aha-flow-build-${BUILDKITE_BUILD_NUMBER}
+        volumes:
+          - "/cad/:/cad"
+        mount-checkout: false
+        shell: ["/bin/bash", "-e", "-c"]
+  agents:
+    docker: true
 
-# Set soft_fail so that failing gold check does not fail pipeline.
 - label: ":hammer: Onyx Gold RTL 1m"
-  agents: { docker: true }  # must run on r7cad-docker b/c that's where we built the docker image!
   key: "goldcheck-onyx"
   depends_on: "docker-build"
-  soft_fail: true  
-  plugins:
-    - uber-workflow/run-without-clone:  # Don't need clone if using docker
-    - docker#v3.2.0:
-        image:   garnet:aha-flow-build-${BUILDKITE_BUILD_NUMBER}
-        volumes: ["/cad/:/cad"]
-        shell:   ["/bin/bash", "-e", "-c"]
-        mount-checkout: false
+  # Set soft_fail so that failing gold check does not fail pipeline.
+  soft_fail: true
   commands: |
     echo "/aha/.buildkite/bin/rtl-goldcheck.sh onyx"
     if ! /aha/.buildkite/bin/rtl-goldcheck.sh onyx; then
@@ -121,17 +117,23 @@ steps:
         echo "$$msg" | buildkite-agent annotate --style "error" --context onyx
         exit 13
     fi
-
-# Instead of multiple similar OIT steps, could maybe do some kind of $$bin/gen-steps | docker-agent upload
+  plugins:
+    - uber-workflow/run-without-clone:
+    - docker#v3.2.0:
+        image: garnet:aha-flow-build-${BUILDKITE_BUILD_NUMBER}
+        volumes:
+          - "/cad/:/cad"
+        mount-checkout: false
+        shell: ["/bin/bash", "-e", "-c"]
+  agents:
+    docker: true
 
 - label: ":hammer: Onyx Integration Tests"
   key: "integration-tests"
   depends_on: "docker-build"
-  agents: { docker: true }  # must run on r7cad-docker b/c that's where we built the docker image!
 
   plugins:
     - uber-workflow/run-without-clone:
-
     - docker#v3.2.0:
         image: garnet:aha-flow-build-${BUILDKITE_BUILD_NUMBER}
         volumes:
@@ -144,34 +146,106 @@ steps:
           - CONFIG
           - FLOW_REPO
         shell: ["/bin/bash", "-e", "-c"]
-
-    # Offload OIT metahooks to like $$bin/pipeline-metahooks.sh
-    # - $$bin/pipeline-metahooks.sh --pre-command
-    # - $$bin/pipeline-metahooks.sh --pre-command
-
     - improbable-eng/metahook:
-        pre-command: $REGRESS_METAHOOKS --pre-command
-        pre-exit:    $REGRESS_METAHOOKS --pre-exit
+
+        pre-command: |
+          echo "+++ OIT PRE COMMAND HOOK BEGIN"
+
+          # Use temp/.TEST to pass fail/success info into and out of docker container
+          echo Renewing `pwd`/temp/.TEST
+          mkdir -p temp; rm -rf temp/.TEST; touch temp/.TEST
+
+          # If trigger came from a submod repo, we will do "pr" regressions.
+          # Otherwise, trigger came from aha repo push/pull and we just do "daily" regressions.
+          # We use "env" file to pass information between steps.
+          # THIS ASSUMES THAT ALL STEPS RUN ON SAME HOST MACHINE and thus see the same commdir!
+
+          # env file sets REQUEST_TYPE to one of "AHA_PUSH", "AHA_PR", or "SUBMOD_PR"
+          # also sets "PR_TAIL_REPO" to requesting submod e.g. "garnet"
+          set -x; cat /var/lib/buildkite-agent/builds/DELETEME/env-$$BUILDKITE_BUILD_NUMBER; set +x
+          source /var/lib/buildkite-agent/builds/DELETEME/env-$$BUILDKITE_BUILD_NUMBER
+
+          echo "--- Pass DO_PR info to docker"
+          echo "Info gets passed to docker by mounting temp dir as /buildkite omg omg"
+          if [ "$$REQUEST_TYPE" == "SUBMOD_PR" ]; then
+              echo "+++ SET DO_PR"; mkdir -p temp; touch temp/DO_PR
+              if [ "$$PR_REPO_TAIL" == "garnet" ]; then
+                  # Delete .TEST as a sign to skip tests
+                  echo "+++ Garnet PR detected, so skip redundant regressions"
+                  rm -rf temp/.TEST
+              fi
+          else
+              echo "+++ UNSET DO_PR"; /bin/rm -rf temp/DO_PR
+          fi
+          test -e temp/DO_PR && echo FOO temp/DO_PR exists || echo FOO temp/DO_PR not exists
+
+          echo "--- OIT PRE COMMAND HOOK END"
+
+        pre-exit: |
+          echo "+++ CHECKING EXIT STATUS"; set -x
+          echo "Send status to github."
+          cd $$BUILDKITE_BUILD_CHECKOUT_PATH
+
+          # Docker will have removed temp/.TEST if all the tests passed
+          if [ "$$BUILDKITE_COMMAND_EXIT_STATUS" == 0 ]; then
+              test -f temp/.TEST && export BUILDKITE_COMMAND_EXIT_STATUS=13
+          fi
+          /bin/rm -rf temp
+
+          # status-update will magically override "success" with "failure" as appropriate!
+          # (Based on BUILDKITE_COMMAND_EXIT_STATUS and BUILDKITE_LAST_HOOK_EXIT_STATUS)
+          ~/bin/status-update success
 
   commands:
+  - |
+    if ! test -e /buildkite/.TEST; then
+        echo "+++ No .TEST detected, so skip redundant regressions"
+        exit
+    fi
+  - |
+    if test -e /buildkite/DO_PR; then
+        echo "--- DO_PR SET (TRUE)"
+    else
+        echo "--- DO_PR UNSET (FALSE)"
+    fi
+  - source /aha/bin/activate
+  - source /cad/modules/tcl/init/sh
+  - module load base incisive xcelium/19.03.003 vcs/T-2022.06-SP2
+  # make /bin/sh symlink to bash instead of dash:
+  - echo "dash dash/sh boolean false" | debconf-set-selections
+  - DEBIAN_FRONTEND=noninteractive dpkg-reconfigure dash
+  - apt update
+  - apt install time
+  - ls /aha
+  - echo    "--- PIP FREEZE"; pip freeze
+  - echo -n "--- GARNET VERSION "; (cd garnet && git rev-parse --verify HEAD)
+  # Run regression tests
+  - if test -e /buildkite/DO_PR; then
+      echo "Trigger came from submod repo pull request; use pr config";
+      export CONFIG=pr;
+    else
+      echo "Trigger came from aha repo; use default config";
+    fi;
 
-  # Setup
-  - /bin/rm -rf tmp
-  - /aha/.buildkite/bin/regress-metahooks.sh --commands conv2_sparse > tmp
-  - source tmp; /bin/rm -rf tmp
 
-  # ORIGINAL:
+
   # - aha regress $$CONFIG --daemon auto --include-dense-only-tests
-
-  # EXPERIMENTS:
-  # - aha regress quickquick
-  # - aha regress conv1_dense --include-dense-only-tests
-  # - aha regress conv1_sparse  # this worked, see aha-flow build 10120
   - aha regress conv2_sparse
+
+
 
   # We report success to the aha-flow app by removing the .TEST file,
   # which is created in the post-checkout hook and checked for in the
   # pre-exit hook.
+
+  # Okay to remove or check but DO NOT CREATE anything in /buildkite, it is owned by root :(
+  - echo "--- Removing Failure Canary"
+  - ls -al /buildkite
+  - rm -rf /buildkite/.TEST
+  - ls -al /buildkite
+
+  agents:
+    docker: true
 
 - wait: { continue_on_failure: true } # One step at a time + continue on failure
 
