--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -177,12 +177,14 @@ steps:
     docker kill $$CONTAINER || echo okay
     docker images; echo IMAGE=$$IMAGE; echo TAG=$$TAG
     if ! docker images | grep $$TAG; then
+        echo 'debuggin: LIVE second time through'
         printf "OH NO cannot find docker image $$IMAGE.\nI will rebuild it for you"
         echo docker build --progress plain . -t "$$IMAGE"
+    else
+        echo 'debuggin: die first time through'
         exit 13
     fi
     docker run -id --name $$CONTAINER --rm -v /cad:/cad -v ./temp:/buildkite:rw $$IMAGE bash
-    exit 13
     script="$($REGRESS_METAHOOKS --commands)"
     docker exec -e CONFIG=$$CONFIG -e REGSTEP=1 $$CONTAINER /bin/bash -c "$$script"
     docker kill $$CONTAINER
