--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -179,7 +179,7 @@ steps:
     if ! docker images | grep $$TAG; then
         echo 'debuggin: LIVE second time through'
         printf "OH NO cannot find docker image $$IMAGE.\nI will rebuild it for you"
-        echo docker build --progress plain . -t "$$IMAGE"
+        docker build --progress plain . -t "$$IMAGE"
     else
         echo 'debuggin: die first time through'
         exit 13
